--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -1,40 +1,62 @@
 .wrapper {
   display: flex;
 }
-
 .side-bar {
   background-color: #253141;
-  height: 100vh;
   width: 300px;
+  height: 100vh;
 }
-.side-header {
+.side-bar-header {
   height: 100px;
   padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+.header-name a {
+  color: #FAFAFA;
+  font-size: 16px;
+  text-decoration: none;
+}
+.create-room {
+  font-size: 10px;
+}
+.create-room a {
+  color: deepskyblue;
+  border: 1px solid lightblue;
+  padding: 14px;
+  text-decoration: none;
 }
 .rooms {
-  background-color: #2f3e51;
+  background-color: #2F3E51;
   height: calc(100vh - 100px);
   padding: 0 20px;
+  overflow: scroll;
+}
+.room {
+  padding: 20px 0 40px;
+}
+.room-name a {
+  color: white;
+  text-decoration: none;
 }
 
 .chat {
   background-color: #ffffff;
   width: calc(100% - 300px);
-  height: 100vh;
-  
 }
 .chat-header {
   height: 100px;
   padding: 0 40px;
 }
 .messages {
-  background-color: #fafafa;
+  background-color: #FAFAFA;
   height: calc(100vh - 100px - 90px);
   padding: 46px 40px 0;
 }
 .form {
-  background-color: #dddddd;
+  background-color: #DDDDDD;
   height: 90px;
   padding: 20px 40px;
 }
-
