--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -49,14 +49,78 @@
 .chat-header {
   height: 100px;
   padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+  /*align-items: center;*/
+}
+.header-title {
+  font-size: 24px;
+  color: #333;
+  margin-top: 36px;
+}
+.header-button {
+  margin-top: 40px;
+}
+.header-button a {
+  color: darkred;
+  border: 1px solid darkred;
+  padding: 20px;
+  text-decoration: none;
 }
 .messages {
   background-color: #FAFAFA;
   height: calc(100vh - 100px - 90px);
   padding: 46px 40px 0;
+  overflow: scroll;
 }
+.message {
+  margin: 10px 0;
+}
+.upper-message {
+  display: flex;
+}
+.message-user {
+  font-size: 16px;
+  color: #434a54;
+}
+.message-date {
+  padding-left: 10px;
+  color: #999;
+  font-size: 12px;
+}
+.lower-message {
+  margin-top: 10px;
+}
+.message-content {
+  color: #434a54;
+  font-size: 14px;
+  margin-bottom: 40px;
+}
+
 .form {
   background-color: #DDDDDD;
   height: 90px;
   padding: 20px 40px;
+  display: flex;
+  /*justify-content: space-between;*/
+}
+.form-input {
+  background-color: white;
+  width: 100%;
+}
+.form-message {
+  border: none;
+  padding-left: 10px;
+  /*margin-left: 40px;*/
+  height: 50px;
+  width: 100%;
+}
+.form-submit {
+  font-size: 16px;
+  background-color: skyblue;
+  color: white;
+  margin-left: 15px;
+  padding: 0 20px;
+  height: 50px;
+  border: none;
 }
