--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,8 +1,53 @@
 <div class="chat-header">
+  <div class="left-header">
+    <div class="header-title">
+      shirajun
+    </div>
+  </div>
+  <div class="right-header">
+    <div class="header-button">
+      <a href="#">チャットを終了する</a>
+    </div>
+  </div>        
 </div>
 
 <div class="messages">
+  <div class="message">
+    <div class="upper-message">
+      <div class="message-user">
+        MIWA
+      </div>
+      <div class="message-date">
+        2020/9/25(fry) 20:49:48
+      </div>
+     </div>
+    <div class="lower-message">
+      <div class="message-content">
+        good morning
+      </div>
+    </div>
+  </div>
+  
+  <div class="message">  
+    <div class="upper-message">
+      <div class="message-user">
+        TSUGU
+      </div>
+      <div class="message-date">
+        2020/9/25(fry) 20:56:22
+      </div>
+    </div>
+    <div class="lower-message">
+      <div class="message-content">
+        mammy
+      </div>
+    </div>
+  </div>
 </div>
 
 <div class="form">
+  <div class="form-input">
+    <input class="form-message" placeholder= "type a message">
+  </div>
+  <input class="form-submit" type="submit" value="送信">  
 </div>
