--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -107,6 +107,7 @@
 .form-input {
   background-color: white;
   width: 100%;
+  display: flex;
 }
 .form-message {
   border: none;
@@ -123,4 +124,17 @@
   padding: 0 20px;
   height: 50px;
   border: none;
+}
+
+.form-image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+}
+.hidden {
+  display: none;
 }
