--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -16,6 +16,18 @@
         <label class='chat-room-form__label' for='chat_room_チャットメンバー'>チャットメンバー</label>
       </div>
       <div class='chat-room-form__field--right'>
+        <select name="room[user_ids][]">
+        <%#select要素のname属性にroom[user_ids][]を指定%>
+          <option value="">チャットするユーザーを選択してください</option>
+          <% User.where.not(id: current_user.id).each do |user| %>
+          <%#モデル名.where.not("条件")は、条件に一致したレコード以外の値を配列として取得%>
+          <%#よってcurrent_user以外を選択肢に表示%>
+            <option value=<%= user.id %>><%= user.name %></option>
+            <%#option要素のvalue属性にuser.idを指定 この記述でroom[user_ids][]をキーに「user.id」をコントローラー側へ送信%>
+          <% end %>
+        </select>
+        <input name="room[user_ids][]" type="hidden" value=<%= current_user_id %>>
+        <%#current_user.idをコントローラー側へ送信できる%>
       </div>
     </div>
     <div class='chat-room-form__field'>
